--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,5 @@
             "Metawesome\\XmlToArray\\Test\\": "tests/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev-master"
 }
