--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,5 @@
             "Metawesome\\XmlToArray\\Test\\": "tests/"
         }
     },
-    "minimum-stability": "dev-master"
+    "minimum-stability": "dev"
 }
